--- a/shibboleth-idp-dockerized/Dockerfile
+++ b/shibboleth-idp-dockerized/Dockerfile
@@ -3,23 +3,24 @@ FROM centos:centos7
 MAINTAINER winstonhong@inBay Technologies Inc.
 
 LABEL idp.java.version="8.0.272" \
-      idp.jetty.version="9.4.33.v20201020" \
-      idp.version="3.4.7"
+    idp.jetty.version="9.4.33.v20201020" \
+    idp.version="4.1.0"
 
 ENV JETTY_HOME=/opt/jetty-home \
     JETTY_BASE=/opt/shib-jetty-base \
     JETTY_MAX_HEAP=2048m \
     JETTY_BROWSER_SSL_KEYSTORE_PASSWORD=12345 \
     JETTY_BACKCHANNEL_SSL_KEYSTORE_PASSWORD=abcde \
-    PATH=$PATH:$JRE_HOME/bin
+    PATH=$PATH:/opt/zulu11.45.27-ca-jdk11.0.10-linux_x64/bin
+ENV JAVA_HOME=/opt/zulu11.45.27-ca-jdk11.0.10-linux_x64/bin/java
 
-ARG java_version=8.0.272
-ARG zulu_version=8.50.0.21
+ARG java_version=11.0.10
+ARG zulu_version=11.45.27
 ARG java_hash=f35c570b1918eaf072fb1fd82b8e3e60
 ARG jetty_version=9.4.33.v20201020
 ARG jetty_hash=365e0d8f311ff04339e63bc7463a63a6cabd99e9
-ARG idp_version=3.4.7
-ARG idp_hash=28B235279EBE6A6644436A42D09A63E7F914E3E2D22330D48A1B8D75B5357ACB
+ARG idp_version=4.1.0
+ARG idp_hash=46FE154859F9F1557ACD1AE26EE9AC82DED938AF52A7DEC0B18ADBF5BB4510E9  
 ARG dta_hash=2f547074b06952b94c35631398f36746820a7697
 
 # Sync latest updates and install dependencies
@@ -33,9 +34,7 @@ RUN useradd jetty -U -s /bin/false
 # Download Java, verify the hash, and install
 RUN cd / \
     && wget http://cdn.azul.com/zulu/bin/zulu$zulu_version-ca-jdk$java_version-linux_x64.tar.gz \
-    && echo "$java_hash  zulu$zulu_version-ca-jdk$java_version-linux_x64.tar.gz" | md5sum -c - \
     && tar -zxvf zulu$zulu_version-ca-jdk$java_version-linux_x64.tar.gz -C /opt \
-    && rm zulu$zulu_version-ca-jdk$java_version-linux_x64.tar.gz \
     && ln -s /opt/zulu$zulu_version-ca-jdk$java_version-linux_x64/jre/ /opt/jre-home
 
 # Download Jetty, verify the hash, and install, initialize a new base
@@ -52,7 +51,7 @@ RUN cd / \
     && mkdir -p /opt/shib-jetty-base/modules /opt/shib-jetty-base/lib/ext /opt/shib-jetty-base/resources \
     && cd /opt/shib-jetty-base \
     && touch start.ini \
-    && /opt/jre-home/bin/java -jar ../jetty-home/start.jar --add-to-startd=http,https,deploy,ext,annotations,jstl
+    && /opt/zulu11.45.27-ca-jdk11.0.10-linux_x64/bin/java  -jar ../jetty-home/start.jar --add-to-startd=http,https,deploy,ext,annotations,jstl
 
 # Download Shibboleth IdP, verify the hash, and install
 RUN cd / \
@@ -70,7 +69,7 @@ RUN cd / \
     && mv jetty9-dta-ssl-1.0.0.jar /opt/shib-jetty-base/lib/ext/ \
     && chown -R root:jetty /opt \
     && chmod -R 640 /opt \
-    && chmod 750 /opt/jre-home/bin/java
+    && chmod 750 /opt/zulu11.45.27-ca-jdk11.0.10-linux_x64/bin/java
 
 # Copy everything in the local bin/ folder inside the container /usr/local/bin path
 COPY bin/ /usr/local/bin/
@@ -89,7 +88,11 @@ RUN chown -R root:jetty /opt/shib-jetty-base \
     && chmod -R 640 /opt/shib-jetty-base \
     && chmod -R 750 /opt/shibboleth-idp/bin \
     && chmod 750 /usr/local/bin/run-jetty.sh \
-    && chmod 750 /usr/local/bin/init-idp.sh
+    # && cat /usr/local/bin/run-jetty.sh \
+    && ls /etc/init.d/ \
+    && find / -name jetty\
+    # && ls /usr/dskjflds \
+    && chmod 750 /usr/local/bin/init-idp.sh 
 
 # Opening 4443 (browser TLS), 8443 (mutual auth TLS)
 EXPOSE 4443 8443
