--- a/shibboleth-idp-dockerized/ext-conf/conf/ldap.properties
+++ b/shibboleth-idp-dockerized/ext-conf/conf/ldap.properties
@@ -52,14 +52,18 @@ idp.attribute.resolver.LDAP.useStartTLS         = %{idp.authn.LDAP.useStartTLS:t
 idp.attribute.resolver.LDAP.trustCertificates   = %{idp.authn.LDAP.trustCertificates:undefined}
 idp.attribute.resolver.LDAP.searchFilter        = (uid=$resolutionContext.principal)
 idp.attribute.resolver.LDAP.returnAttributes    = cn,homephone,mail
+idp.attribute.resolver.LDAP.connectTimeout      = 3000
+idp.attribute.resolver.LDAP.responseTimeout     = 3000
 
 # LDAP pool configuration, used for both authn and DN resolution
-#idp.pool.LDAP.minSize                          = 3
-#idp.pool.LDAP.maxSize                          = 10
-#idp.pool.LDAP.validateOnCheckout               = false
-#idp.pool.LDAP.validatePeriodically             = true
-#idp.pool.LDAP.validatePeriod                   = 300
-#idp.pool.LDAP.prunePeriod                      = 300
-#idp.pool.LDAP.idleTime                         = 600
-#idp.pool.LDAP.blockWaitTime                    = 3000
-#idp.pool.LDAP.failFastInitialize               = false
+idp.pool.LDAP.minSize                          = 3
+idp.pool.LDAP.maxSize                          = 10
+idp.pool.LDAP.validateOnCheckout               = false
+idp.pool.LDAP.validatePeriodically             = true
+idp.pool.LDAP.validatePeriod                   = 300
+idp.pool.LDAP.prunePeriod                      = 300
+idp.pool.LDAP.idleTime                         = 600
+idp.pool.LDAP.blockWaitTime                    = 3000
+idp.pool.LDAP.failFastInitialize               = false
+
+idp.persistentId.salt = @&*^%
