--- a/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
+++ b/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
@@ -5,7 +5,7 @@ idp.additionalProperties= /conf/ldap.properties, /conf/saml-nameid.properties, /
 idp.entityID= https://localhost/idp/shibboleth
 
 # Set the scope used in the attribute resolver for scoped attributes
-idp.scope= example.com
+idp.scope= auth.byndid.com
 
 # General cookie properties (maxAge only applies to persistent cookies)
 #idp.cookie.secure = false
