--- a/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
+++ b/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
@@ -97,7 +97,8 @@ idp.encryption.cert= %{idp.home}/credentials/idp-encryption.crt
 #idp.session.defaultSPlifetime = PT2H
 
 # Regular expression matching login flows to enable, e.g. IPAddress|Password
-idp.authn.flows=SAML
+# idp.authn.flows=SAML
+idp.authn.flows=Password|SAML
 
 # Regular expression of forced "initial" methods when no session exists,
 # usually in conjunction with the idp.authn.resolveAttribute property below.
