--- a/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
+++ b/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
@@ -98,7 +98,7 @@ idp.encryption.cert= %{idp.home}/credentials/idp-encryption.crt
 
 # Regular expression matching login flows to enable, e.g. IPAddress|Password
 idp.authn.flows= Password
-# REPLACE LINE ABOVE AND UNCOMMENT LINE BELOW TO ADD SAML TO AUTHN FLOWS
+# REPLACE LINE ABOVE AND UNCOMMENT LINE BELOW TO ADD SAML TO AUTHN FLOWS // SAML PROXY WALKTHROUGH STEP 4
 # idp.authn.flows=Password|SAML
 
 # Regular expression of forced "initial" methods when no session exists,
