--- a/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
+++ b/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
@@ -97,10 +97,11 @@ idp.encryption.cert= %{idp.home}/credentials/idp-encryption.crt
 #idp.session.defaultSPlifetime = PT2H
 
 # Regular expression matching login flows to enable, e.g. IPAddress|Password
-idp.authn.flows= Password
+idp.authn.flows= MFA|SAML
 # REPLACE LINE ABOVE AND UNCOMMENT LINE BELOW TO ADD SAML TO AUTHN FLOWS // SAML PROXY WALKTHROUGH STEP 4
 # idp.authn.flows=Password|SAML
 
+# idp.authn.flows=MFA
 # Regular expression of forced "initial" methods when no session exists,
 # usually in conjunction with the idp.authn.resolveAttribute property below.
 #idp.authn.flows.initial = Password
