--- a/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
+++ b/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
@@ -99,7 +99,15 @@ idp.encryption.cert= %{idp.home}/credentials/idp-encryption.crt
 # Regular expression matching login flows to enable, e.g. IPAddress|Password
 # idp.authn.flows= MFA|SAML|Password
 # REPLACE LINE ABOVE AND UNCOMMENT LINE BELOW TO ADD SAML TO AUTHN FLOWS // SAML PROXY WALKTHROUGH STEP 4
-idp.authn.flows=Password|SAML
+idp.authn.flows=External
+
+# CAS Client properties (usage loosely matches that of the Java CAS Client)
+## CAS Server Properties
+shibcas.casServerUrlPrefix = https://cassserver.example.edu/cas
+shibcas.casServerLoginUrl = ${shibcas.casServerUrlPrefix}/login
+
+## Shibboleth Server Properties
+shibcas.serverName = https://shibserver.example.edu
 
 # idp.authn.flows=MFA
 # Regular expression of forced "initial" methods when no session exists,
