--- a/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
+++ b/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
@@ -99,7 +99,7 @@ idp.encryption.cert= %{idp.home}/credentials/idp-encryption.crt
 # Regular expression matching login flows to enable, e.g. IPAddress|Password
 # idp.authn.flows= MFA|SAML|Password
 # REPLACE LINE ABOVE AND UNCOMMENT LINE BELOW TO ADD SAML TO AUTHN FLOWS // SAML PROXY WALKTHROUGH STEP 4
-idp.authn.flows=External
+idp.authn.flows=MFA
 
 # CAS Client properties (usage loosely matches that of the Java CAS Client)
 ## CAS Server Properties
