--- a/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
+++ b/shibboleth-idp-dockerized/ext-conf/conf/idp.properties
@@ -99,7 +99,7 @@ idp.encryption.optional = true
 # Regular expression matching login flows to enable, e.g. IPAddress|Password
 # idp.authn.flows= MFA|SAML|Password
 # REPLACE LINE ABOVE AND UNCOMMENT LINE BELOW TO ADD SAML TO AUTHN FLOWS // SAML PROXY WALKTHROUGH STEP 4
-idp.authn.flows=MFA|SAML
+idp.authn.flows=SAML
 
 # idp.authn.flows=MFA
 # Regular expression of forced "initial" methods when no session exists,
