--- a/shibboleth-idp-dockerized/base/shibboleth-idp/conf/attributes/custom/schacHomeOrganizationType.props
+++ b/shibboleth-idp-dockerized/base/shibboleth-idp/conf/attributes/custom/schacHomeOrganizationType.props
@@ -1,7 +1,7 @@
-id=schacHomeOrganizationType
+id=AAL
 transcoder=SAML2StringTranscoder SAML1StringTranscoder
-saml1.name=urn:oid:1.3.6.1.4.1.25178.1.2.10
-saml2.name=urn:oid:1.3.6.1.4.1.25178.1.2.10
+saml1.name=AAL
+saml2.name=AAL
 displayName.en=Home Orgainisation type
 description.en=Type of Organisation the user belongs too
 
